--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ fairscale = "^0.4"
 torchmetrics = "^0.9"
 torch-optimizer = "^0.3"
 tensorboard = "^2.11"
-einops = "^0.4"
+einops = ">= 0.4, <0.7"
 cchardet = "^2.1"
 datasets = {version = "^2.4", optional = true}
 tokenizers = {version = "^0.12", optional = true}
